--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ header {
   top: 0;
   z-index: 1000;
 }
+
 .navbar-img {
   display: flex;
   align-items: center;
@@ -150,6 +151,113 @@ header nav a:hover {
 
 .home-banner .transparent-button {
   margin-top: 24px;
+}
+
+.home-section {
+  width: 100%;
+  display: flex;
+  padding: 80px 160px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 64px;
+  background: var(--Blue-blue-50, #E6F4F5);
+}
+
+.home-section-heading {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  gap: 4px;
+}
+
+.home-section-heading h2 {
+  color: var(--Black-Primary, #111);
+  text-align: center;
+  font-family: Afacad;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: -0.96px;
+}
+
+.home-section-heading h2 span {
+  color: var(--Orange-Primary, #F45353);
+}
+
+.home-section-heading p {
+  width: 496px;
+  color: var(--Blue-blue-600, #008189);
+  text-align: center;
+  font-family: Afacad;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: -0.32px;
+}
+
+.home-advantage {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 40px;
+  align-self: stretch;
+}
+
+.home-advantage-set {
+  display: flex;
+  width: 100%;
+  padding: 32px 16px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+  border-radius: 8px;
+  border: 1px solid var(--Blue-blue-50, #E6F4F5);
+  background: linear-gradient(108deg, #FFF 0%, #E6F4F5 100%);
+  backdrop-filter: blur(20px);
+  align-self: stretch;
+}
+
+.home-advantage-set img {
+  width: 24px;
+  height: 24px;
+  object-fit: cover;
+}
+
+.home-advantage-line {
+  width: 100%;
+  height: 1px;
+  background: #E6F4F5;
+}
+
+.home-advantage-set section {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 4px;
+}
+
+.home-advantage-set section h3 {
+  color: #000;
+  font-family: Afacad;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: -0.48px;
+}
+
+.home-advantage-set section p {
+  color: var(--Black-black-300, #606060);
+  font-family: Afacad;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: -0.32px;
 }
 
 .home-text {
