--- a/style.css
+++ b/style.css
@@ -5,6 +5,14 @@
   letter-spacing: normal;
 }
 
+@font-face {
+  font-family: 'Alexandria';
+  src: url('/Alexandria-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+
 header {
   width: 100%;
   height: 80px;
@@ -795,15 +803,15 @@ header nav a:hover {
   object-fit: cover;
 }
 
-.testimony-info section{
+.testimony-info section {
   display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: flex-start;
-gap: 0px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 0px;
 }
 
-.testimony-info section h3{
+.testimony-info section h3 {
   color: var(--Black-Primary, #111);
   font-family: Afacad;
   font-size: 18px;
@@ -813,7 +821,7 @@ gap: 0px;
   letter-spacing: -0.36px;
 }
 
-.testimony-info section p{
+.testimony-info section p {
   color: var(--Black-black-300, #606060);
   font-family: Afacad;
   font-size: 14px;
@@ -833,6 +841,377 @@ gap: 0px;
 .home-text img {
   width: 100%;
   object-fit: cover;
+}
+
+/* About */
+
+#about-banner {
+  background: url("/About Desktop Banner.png") no-repeat center center;
+  background-size: cover;
+}
+
+.secondary-banner {
+  width: 100%;
+  height: 100svh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.secondary-banner h1 {
+  font-family: Afacad;
+  font-size: 84px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: -3.36px;
+  background: linear-gradient(110deg, #008E97 0%, #004E53 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.secondary-banner p {
+  width: 648px;
+  color: var(--Black-black-300, #606060);
+  text-align: center;
+  font-family: Afacad;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: -0.4px;
+}
+
+.about-4s2r {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 100px;
+  padding: 80px 160px;
+  background: var(--Blue-blue-50, #E6F4F5);
+}
+
+.about-4s2r section {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 40px;
+  align-self: stretch;
+}
+
+.about-4s2r section:last-child {
+  flex-direction: row-reverse;
+}
+
+.text-4s2r {
+  width: 20%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  align-self: stretch;
+}
+
+.text-4s2r p {
+  color: #ABABAB;
+  font-family: Alexandria;
+  font-size: 120px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 22.8px;
+  opacity: 0.2;
+}
+
+.text-4s2r p:first-child {
+  transform: translateY(40px);
+}
+
+.text-4s2r p:last-child {
+  transform: translateY(80px);
+}
+
+.colour-text-4s2r {
+  background: url("/4s frame 1.png"), url("/4s frame 2.png") no-repeat center center;
+  background-size: cover;
+  background-position: center calc(50% + 10px);
+}
+
+.colour-text-4s2r {
+  width: 30%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+}
+
+.colour-text-4s2r p {
+  color: #000;
+  font-family: Afacad;
+  font-size: 72px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: -2.88px;
+  height: 64px;
+}
+
+.colour-text-4s2r sub {
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: var(--Orange-Primary, #F45353);
+  color: transparent;
+  font-family: 'Afacad', sans-serif;
+  font-size: 72px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: -2.88px;
+  height: 64px;
+}
+
+
+.colour-text-4s2r span {
+  color: var(--Orange-Primary, #F45353);
+  font-family: Afacad;
+  font-size: 72px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: -2.88px;
+  height: 64px;
+}
+
+.info-4s2r {
+  width: 50%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.info-4s2r p {
+  color: var(--Black-black-300, #606060);
+  font-family: Afacad;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: -0.64px;
+}
+
+.about-vision {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+}
+
+.about-vision-info {
+  color: var(--Black-black-300, #606060);
+  text-align: center;
+  font-family: Afacad;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: -0.36px;
+}
+
+.about-vision-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  align-self: stretch;
+}
+
+.vision-mission {
+  width: 100%;
+  display: flex;
+  padding: 32px 16px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 32px;
+  border-radius: 8px;
+  background: linear-gradient(108deg, #FFF 0%, #E0FDFF 100%);
+  backdrop-filter: blur(20px);
+}
+
+.red-line {
+  width: 150px;
+  height: 1.5px;
+  background: #F45353;
+}
+
+.about-vision-container section {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+}
+
+.about-vision-container section h3 {
+  color: var(--Black-Primary, #111);
+  font-family: Afacad;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: -0.8px;
+}
+
+.about-vision-container section p {
+  color: var(--Black-black-300, #606060);
+  font-family: Afacad;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: -0.32px;
+}
+
+.core-principles {
+  width: 100%;
+  display: flex;
+  padding: 57px 24px 40px 24px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 32px;
+  border-radius: 8px;
+  background: linear-gradient(108deg, #FFF 0%, #E6F4F5 100%);
+  box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.08);
+  align-self: stretch;
+}
+
+.core-principles ul {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+  align-self: stretch;
+}
+
+.core-principles ul li {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  align-self: stretch;
+}
+
+.core-principles ul li img {
+  width: 24px;
+  height: 24px;
+  object-fit: cover;
+}
+
+.core-principles ul li p {
+  color: var(--Black-black-300, #606060);
+  font-family: Afacad;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: -0.32px;
+}
+
+.company-text {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-self: stretch;
+}
+
+.company-text img {
+  width: 100%;
+  object-fit: cover;
+}
+
+.advance {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 46px;
+}
+
+.advance section {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 64px;
+  align-self: stretch;
+}
+
+.advance section:last-child {
+  flex-direction: row-reverse;
+}
+
+.advance section iframe {
+  width: 100%;
+  height: 360px;
+  border-radius: 8px;
+}
+
+.advance section p {
+  width: 100%;
+  color: var(--Black-black-300, #606060);
+  font-family: Afacad;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: -0.32px;
+}
+
+.strengths-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.strengths-container section {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+}
+
+.strengths-container section h3 {
+  color: #000;
+  font-family: Afacad;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: -0.48px;
+}
+
+.strengths-container section p {
+  color: var(--Black-black-300, #606060);
+  font-family: Afacad;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: -0.32px;
+}
+
+
+.industries-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 24px;
 }
 
 /* Footer */
