--- a/style.css
+++ b/style.css
@@ -1902,4 +1902,230 @@ footer {
   .desktop {
     display: none;
   }
+
+  header {
+    display: flex;
+    width: 100%;
+    height: 56px;
+    padding: 10px 20px;
+    justify-content: space-between;
+    align-items: center;
+    background: #FFF;
+    box-shadow: 2px 1px 6px 0px rgba(0, 0, 0, 0.08);
+  }
+
+  .navbar-logo {
+    height: 32px;
+  }
+
+  .navbar-name {
+    height: 24px;
+  }
+
+  .mobile-navbar-button img {
+    width: 32px;
+    height: 32px;
+    flex-shrink: 0;
+  }
+
+
+
+  .mobileNavbar {
+    width: 100%;
+    height: calc(100svh - 56px);
+    background: var(--White-BG, #FFF);
+    position: fixed;
+    top: 56px;
+    right: 0;
+    z-index: 100;
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in-out;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 80px;
+    padding: 40px 20px 20px 20px;
+  }
+
+  @keyframes slideIn {
+    from {
+      transform: translateX(100%);
+    }
+
+    to {
+      transform: translateX(0);
+    }
+  }
+
+  @keyframes slideOut {
+    from {
+      transform: translateX(0);
+    }
+
+    to {
+      transform: translateX(100%);
+    }
+  }
+
+  .activeMobileNavbar {
+    transform: translateX(0);
+    animation: slideIn 0.3s forwards;
+  }
+
+  .nonactiveMobileNavbar {
+    transform: translateX(100%);
+    animation: slideOut 0.3s forwards;
+  }
+
+  .mobileNavbar nav {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
+  }
+
+  .mobileNavbar nav a {
+    text-decoration: none;
+    color: #000;
+    font-family: Afacad;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: -0.4px;
+  }
+
+  .mobileNavbar nav a:hover {
+    color: var(--Blue-Primary, #008e97);
+  }
+
+  .mobileNavbar .blue-button {
+    width: 100%;
+    text-align: center;
+  }
+
+  /* Footer */
+
+  footer {
+    display: flex;
+    padding: 40px 20px;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .footer-container {
+    display: flex;
+    padding: 32px 16px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+    border-radius: 8px;
+    background: linear-gradient(110deg, #008E97 0%, #004E53 100%);
+  }
+
+  .footer-container-up {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
+  }
+
+  .footer-container-up-left {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 4px;
+    align-self: stretch;
+  }
+
+  .footer-container-up-left p {
+    color: var(--White, #FFF);
+    font-family: Afacad;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+  }
+
+  .footer-logo-container span {
+    color: #FFF;
+    font-family: Afacad;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: -0.28px;
+  }
+
+  .footer-logo {
+    height: 32px;
+  }
+
+  .footer-name {
+    height: 24px;
+  }
+
+  .footer-container-up-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 16px;
+  }
+
+  .footer-container-down {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    align-self: stretch;
+  }
+
+  .footer-down {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+    align-self: stretch;
+    color: var(--White, #FFF);
+    text-align: right;
+    font-family: Afacad;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+  }
+
+  .footer-more-links a {
+    color: var(--White, #FFF);
+    text-align: right;
+    font-family: Afacad;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+  }
+
+  .footer-social a img {
+    width: 16px;
+    height: 16px;
+  }
+
+  .footer-social {
+    order: 1;
+  }
+
+  .footer-more-links {
+    order: 2;
+  }
+
+  .footer-down p {
+    order: 3;
+    text-align: center;
+  }
+
 }
