--- a/style.css
+++ b/style.css
@@ -642,6 +642,13 @@ header nav a:hover {
   background: rgba(214, 214, 214, 0.50);
 }
 
+.home-features-right-down-container {
+  width: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+}
+
 .home-features-right-down {
   width: 100%;
   display: flex;
@@ -2004,6 +2011,447 @@ footer {
   .mobileNavbar .blue-button {
     width: 100%;
     text-align: center;
+  }
+
+  /* Home */
+
+  .home-banner {
+    padding: 80px 20px 22px 20px;
+  }
+
+  .home-banner-container {
+    padding: 0;
+  }
+
+  .home-banner-container img {
+    width: 100%;
+    height: auto;
+  }
+
+  .home-banner-container h1 {
+    color: #FFF;
+    text-align: center;
+    font-family: Afacad;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: -1.6px;
+  }
+
+  .home-banner-container p {
+    padding: 0px 20px;
+    width: 100%;
+    color: #FFF;
+    text-align: center;
+    font-family: Afacad;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: -0.32px;
+  }
+
+  .transparent-button {
+    display: flex;
+    padding: 8px 16px;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    border-radius: 4px;
+    background: var(--Blue-blue-50, #E6F4F5);
+  }
+
+  .home-section {
+    display: flex;
+    padding: 40px 20px;
+    flex-direction: column;
+    align-items: center;
+    gap: 32px;
+  }
+
+  .home-section-heading h2 {
+    color: var(--Black-Primary, #111);
+    text-align: center;
+    font-family: Afacad;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: -0.48px;
+  }
+
+  .home-section-heading p {
+    width: 100%;
+    color: var(--Blue-blue-600, #008189);
+    text-align: center;
+    font-family: Afacad;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.28px;
+  }
+
+  .home-advantage {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
+  }
+
+  .home-advantage-set {
+    display: flex;
+    padding: 28px 16px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
+    align-self: stretch;
+    border-radius: 8px;
+    border: 1px solid var(--Blue-blue-50, #E6F4F5);
+    background: linear-gradient(108deg, #FFF 0%, #E6F4F5 100%);
+    backdrop-filter: blur(20px);
+  }
+
+  .home-advantage-set img {
+    width: 20px;
+    height: 20px;
+  }
+
+  .home-advantage-set section h3 {
+    color: #000;
+    font-family: Afacad;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: -0.32px;
+  }
+
+  .home-advantage-set section p {
+    color: var(--Black-black-300, #606060);
+    font-family: Afacad;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.28px;
+  }
+
+  .home-about {
+    display: flex;
+    padding: 0;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
+  }
+
+  .home-about-imgs {
+    gap: 16px;
+  }
+
+
+  .home-about-imgs img:nth-child(1) {
+    height: 219px;
+  }
+
+  .home-about-imgs img {
+    height: 101.5px;
+  }
+
+  .home-about section {
+    width: 100%;
+  }
+
+  .home-about section p {
+    text-align: center;
+    font-family: Afacad;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.28px;
+  }
+
+  .home-gallery {
+    padding: 0;
+    gap: 24px;
+  }
+
+  .home-gallery-card {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+    align-self: stretch;
+  }
+
+  .home-gallery-card-left {
+    height: 333px;
+  }
+
+  .home-gallery-card-left section {
+    height: 259px;
+  }
+
+  .home-gallery-card-left section h3 {
+    color: var(--White, #FFF);
+    font-family: Afacad;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: -0.48px;
+  }
+
+  .home-gallery-card-left img {
+    width: 93%;
+    height: 251px;
+    bottom: 26px;
+  }
+
+  .home-gallery-card-right {
+    gap: 24px;
+  }
+
+  .home-gallery-controls button {
+    width: 32px;
+    height: 32px
+  }
+
+  .home-gallery-controls button img {
+    width: 16px;
+    height: 16px;
+    flex-shrink: 0;
+  }
+
+  .home-features {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
+  }
+
+  .home-features-left {
+    gap: 16px;
+  }
+
+  .home-features-left h3 {
+    color: var(--Black-Primary, #111);
+    font-family: Afacad;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: -0.4px;
+  }
+
+  .home-features-cards-container {
+    gap: 16px;
+  }
+
+  .home-features-cards {
+    gap: 16px;
+  }
+
+  .home-features-cards:first-child {
+    padding: 0;
+  }
+
+  .home-features-cards:last-child {
+    padding: 0;
+  }
+
+  .home-features-card {
+    height: auto;
+    gap: 4px;
+  }
+
+  .home-features-card img {
+    height: 169px;
+  }
+
+  .home-features-card:hover img {
+    height: 169px;
+  }
+
+  .home-features-card p {
+    padding: 0;
+    color: var(--Black-black-300, #606060);
+    font-family: Afacad;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: -0.32px;
+  }
+
+  .home-features-right {
+    gap: 20px;
+  }
+
+  .home-features-right-up {
+    padding: 0;
+    gap: 24px;
+  }
+
+  .home-features-right-up span {
+    height: 72px;
+    font-family: "Bebas Neue";
+    font-size: 60px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: 11.4px;
+    opacity: 0.3;
+    background: linear-gradient(180deg, #00676E 0%, #FFF 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-align: left;
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+
+  .home-competition {
+    gap: 16px;
+  }
+
+  .home-competition ul {
+    padding: 16px;
+    gap: 16px;
+  }
+
+  .home-competition ul li h4 {
+    color: var(--Orange-Primary, #F45353);
+    font-family: Afacad;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: -0.32px;
+  }
+
+  .home-competition ul li p {
+    color: var(--Black-black-300, #606060);
+    font-family: Afacad;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.28px;
+  }
+
+  .home-features-right-down {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 4px;
+    right: 0;
+  }
+
+  .home-features-dot {
+    width: 4px;
+    height: 4px;
+  }
+
+  .home-features-right-down p {
+    width: 90%;
+    padding: 8px;
+    color: var(--White, #FFF);
+    font-family: Afacad;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: -0.4px;
+  }
+
+  .home-contact {
+    display: flex;
+    padding: 40px 20px;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .home-contact-container {
+    display: flex;
+    height: 600px;
+    padding: 198.5px 0px 197.5px 0px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+  }
+
+  .home-contact-container section {
+    gap: 8px;
+  }
+
+  .home-contact-container section h2 {
+    color: #FFF;
+    text-align: center;
+    font-family: Afacad;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: -0.8px;
+  }
+
+  .home-contact-container section p {
+    color: var(--White, #FFF);
+    text-align: center;
+    font-family: Afacad;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.28px;
+  }
+
+  .testimony {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    overflow: auto;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+  }
+
+  .testimony::-webkit-scrollbar {
+    display: none;
+  }
+
+
+  .testimony-card {
+    display: flex;
+    width: 80%;
+    padding: 24px 12px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
+    flex-shrink: 0;
+    align-self: stretch;
+  }
+
+  .testimony-card section {
+    gap: 24px;
+  }
+
+  .testimony-card section p {
+    color: var(--Black-black-300, #606060);
+    font-family: Afacad;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.28px;
+  }
+
+  .testimony-info section {
+    gap: 0;
   }
 
   /* Footer */
